<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.popularmovies.MainActivity">

    <item
        android:id="@+id/action_popular"
        android:orderInCategory="100"
        android:title="@string/action_popular"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_top_rated"
        android:orderInCategory="101"
        android:title="@string/action_top_rated"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_now_playing"
        android:orderInCategory="102"
        android:title="@string/action_now_playing"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upcoming"
        android:orderInCategory="103"
        android:title="@string/action_upcoming"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="104"
        android:title="@string/action_favorites"
        app:showAsAction="never" />

</menu>