<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.popularmovies.MainActivity">

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/action_favorite"
        android:icon="@drawable/ic_menu_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:title="@string/action_share"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_imdb"
        android:orderInCategory="102"
        android:title="@string/action_imdb"
        app:showAsAction="never" />

</menu>